# rust-pod-locality

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  WORKSPACE
cargo/: BUILD.bazel  crates.bzl
cargo/remote/: BUILD.android_system_properties-0.1.4.bazel  BUILD.anyhow-1.0.61.bazel  BUILD.atty-0.2.14.bazel  BUILD.base64-0.13.0.bazel  BUILD.block-buffer-0.10.2.bazel  BUILD.block-buffer-0.9.0.bazel  BUILD.buf_redux-0.8.4.bazel  BUILD.chrono-0.4.22.bazel  BUILD.clap-3.2.17.bazel  BUILD.clap_derive-3.2.17.bazel  BUILD.clap_lex-0.2.4.bazel  BUILD.cpufeatures-0.2.3.bazel  BUILD.darling_core-0.14.1.bazel  BUILD.darling_macro-0.14.1.bazel  BUILD.derivative-2.2.0.bazel  BUILD.digest-0.10.3.bazel  BUILD.digest-0.9.0.bazel  BUILD.dirs-sys-next-0.1.2.bazel  BUILD.dyn-clone-1.0.9.bazel  BUILD.futures-0.3.23.bazel  BUILD.futures-channel-0.3.23.bazel  BUILD.futures-core-0.3.23.bazel  BUILD.futures-executor-0.3.23.bazel  BUILD.futures-io-0.3.23.bazel  BUILD.futures-macro-0.3.23.bazel  BUILD.futures-sink-0.3.23.bazel  BUILD.futures-task-0.3.23.bazel  BUILD.futures-util-0.3.23.bazel  BUILD.getrandom-0.2.7.bazel  BUILD.h2-0.3.14.bazel  BUILD.hashbrown-0.12.3.bazel  BUILD.headers-0.3.7.bazel  BUILD.headers-core-0.2.0.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.http-0.2.8.bazel  BUILD.http-body-0.4.5.bazel  BUILD.hyper-0.14.20.bazel  BUILD.hyper-openssl-0.9.2.bazel  BUILD.hyper-timeout-0.4.1.bazel  BUILD.iana-time-zone-0.1.44.bazel  (+90 more)
src/: BUILD.bazel  controller.rs  main.rs
src/controller/: pod.rs
src/webhook/: pod.rs
