[package]
name = "k8s-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
kube = { version = "0.74.0", features = ["admission","runtime", "derive"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["macros","rt-multi-thread"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
serde = { version = "1.0.143", features = ["std", "derive"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
kube-derive = "0.74.0"
serde_json = "1.0.83"
schemars = "0.8.10"
serde_yaml = "0.9.7"
futures = "0.3.23"
json-patch = "0.2.6"
warp = { version = "0.3.2", features = ["tls"] }
clap = { version = "3.2.17", features = ["derive"] }


[package.metadata.raze]
workspace_path = "//cargo"
package_aliases_dir = "cargo"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
genmode = "Remote"
experimental_api = true
default_gen_buildrs = true

[package.metadata.raze.crates.ring.'*']
compile_data_attr = "glob([\"**/*.der\"])"

[package.metadata.raze.crates.webpki.'*']
compile_data_attr = "glob([\"**/*.der\"])"

[package.metadata.raze.crates.clap_derive.'*']
compile_data_attr = "glob([\"**/README.md\"])"

[package.metadata.raze.crates.clap.'*']
compile_data_attr = "glob([\"**/*.md\"])"