load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//cargo:crates.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "controller",
    srcs = glob([
        "**/*.rs",
        "*.rs",
    ]),
    proc_macro_deps = all_crate_deps(
        package_name = "",
        proc_macro = True,
    ),
    deps = all_crate_deps(
        package_name = "",
        normal = True,
    ),
)
